--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -1,5 +1,5 @@
 NETWORK_PASSPHRASE="Public Global Stellar Network ; September 2015"
-ACCOUNTS=[""]
+ACCOUNTS=["GA3QQNHHNYGCU54CWQCDTUG27MZQTRQ6DFV47SFYVDG7ZETOSE4XPXLL"]
 VERSION="2.0.0"
 
 [DOCUMENTATION]
@@ -12,7 +12,7 @@ name="Llamaist"
 
 [[CURRENCIES]]
 code="LLAMA"
-issuer=""
+issuer="GA3QQNHHNYGCU54CWQCDTUG27MZQTRQ6DFV47SFYVDG7ZETOSE4XPXLL"
 display_decimals=7
 name="LLAMA COIN"
 desc="We want to become a Llama Network and have our own blockchain. Llama Coin is the accidental crypto movement that makes people smile! It is also an opensource peer-to-peer cryptocurrency that utilises blockchain technology, a highly secure decentralised system of storing information as a public ledger that is maintained by a network of computers called nodes. More than this, though, is the ethos of Llama Coin, summarised in the Llama Coin Manifesto , and its amazing, vibrant community made up of friendly folks just like you!"
